# across-qa

./: README.md  pyproject.toml
.github/workflows/: slack-ingestion-check.yml
across_qa/: __init__.py  checker.py  history.py  main.py  visualization.py
scripts/: slack_ingestion_report.py
tests/: __init__.py  test_checker.py  test_history.py  test_visualization.py
